[package]
name = "starter"
version = "0.1.0"
edition = "2024"
authors = ["Jaime Lopez <jailop@protonmail.com>"]
license = "MIT"
description = "Run and control commands in parallel"
readme = "README.md"
repository = "https://github.com/jailop/starter"
homepage = "https://github.com/jailop/starter"
keywords = ["cli", "terminal", "command", "parallel"]
categories = ["command-line-utilities"]


[dependencies]
crossterm = "0.29.0"
futures = "0.3.31"
libc = "0.2.172"
nix = { version = "0.30.1", features = ["process", "signal"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full", "io-std", "io-util", "process", "sync"] }

